--- a/Boostrap/boostrap/css/sb-admin-2.css
+++ b/Boostrap/boostrap/css/sb-admin-2.css
@@ -627,11 +627,11 @@ pre code {
   }
 }
 
-.box1{
-	width: 100px;
-	height: 100px;
-	background-color: blue;
-	color: white;
+.box1 {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  color: white;
 }
 
 .row {
@@ -12111,19 +12111,19 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("../../../assets/img/polres/listi.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("../../../assets/img/polres/listi.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("../../../assets/img/polres/listi.jpg");
   background-position: center;
   background-size: cover;
 }
