--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #ef6603;
+  color: #dc3545;
   text-decoration: none;
 }
 
@@ -42,7 +42,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #ef6603;
+  background: #dc3545;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -161,7 +161,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  background: #ef6603;
+  background: #dc3545;
 }
 
 .navbar .dropdown ul {
@@ -349,7 +349,7 @@ h6 {
   background-position: center center;
   background-repeat: no-repeat;
   /* background-attachment: fixed; */
-  background: linear-gradient(0deg, #2a2c39 0%, #33364a 100%);
+  background: linear-gradient(0deg, #6b39f3 0%, #210fc5 100%);
   padding: 0;
 }
 
@@ -407,11 +407,11 @@ h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #ef6603;
+  border: 2px solid #dc3545;
 }
 
 #hero .btn-get-started:hover {
-  background: #ef6603;
+  background: #dc3545;
   color: #fff;
   text-decoration: none;
 }
@@ -554,7 +554,7 @@ section {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #fd9042;
+  background: #210fc5;
   margin: 4px 10px;
 }
 
@@ -599,7 +599,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #ef6603;
+  color: #dc3545;
   line-height: 1;
 }
 
@@ -617,15 +617,15 @@ section {
   border-radius: 5px;
   transition: 0.3s;
   line-height: 1;
-  color: #ef6603;
+  color: #dc3545;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #ef6603;
+  border: 2px solid #dc3545;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #ef6603;
+  background: #dc3545;
   color: #fff;
   text-decoration: none;
 }
@@ -660,13 +660,13 @@ section {
 }
 
 .features .nav-link:hover {
-  color: #ef6603;
+  color: #dc3545;
 }
 
 .features .nav-link.active {
-  background: #ef6603;
+  background: #dc3545;
   color: #fff;
-  border-color: #ef6603;
+  border-color: #dc3545;
 }
 
 @media (max-width: 768px) {
@@ -708,7 +708,7 @@ section {
 .features .tab-pane ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #ef6603;
+  color: #dc3545;
 }
 
 .features .tab-pane p:last-child {
@@ -719,7 +719,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: #2a2c39;
+  background: #210fc5;
   padding: 80px 0;
 }
 
@@ -745,12 +745,12 @@ section {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #ef6603;
+  background: #dc3545;
 }
 
 .cta .cta-btn:hover {
   background: #fff;
-  color: #ef6603;
+  color: #dc3545;
 }
 
 @media (max-width: 1024px) {
@@ -812,7 +812,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #ef6603;
+  color: #dc3545;
 }
 
 .services .description {
@@ -838,7 +838,7 @@ section {
   font-weight: 500;
   line-height: 1;
   text-transform: uppercase;
-  color: #444444;
+  color: #f31243;
   transition: all 0.3s ease-in-out;
 }
 
@@ -862,12 +862,12 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #ef6603;
+  color: #dc3545;
 }
 
 .portfolio #portfolio-flters li.filter-active::before,
 .portfolio #portfolio-flters li.filter-active::after {
-  color: #ef6603;
+  color: #dc3545;
 }
 
 .portfolio .portfolio-item {
@@ -978,11 +978,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ef6603;
+  border: 1px solid #dc3545;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ef6603;
+  background-color: #dc3545;
 }
 
 .portfolio-details .portfolio-info {
@@ -1093,11 +1093,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #ef6603;
+  border: 1px solid #dc3545;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #ef6603;
+  background-color: #dc3545;
 }
 
 /*--------------------------------------------------------------
@@ -1125,7 +1125,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #ef6603;
+  color: #dc3545;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1146,7 +1146,7 @@ section {
 .pricing ul {
   padding: 0;
   list-style: none;
-  color: #444444;
+  color: #f31243;
   text-align: center;
   line-height: 20px;
   font-size: 14px;
@@ -1157,7 +1157,7 @@ section {
 }
 
 .pricing ul i {
-  color: #ef6603;
+  color: #dc3545;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1175,7 +1175,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #ef6603;
+  background: #dc3545;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 50px;
@@ -1193,12 +1193,12 @@ section {
 }
 
 .pricing .featured {
-  border: 2px solid #ef6603;
+  border: 2px solid #dc3545;
 }
 
 .pricing .featured h3 {
   color: #fff;
-  background: #ef6603;
+  background: #dc3545;
 }
 
 .pricing .advanced {
@@ -1210,7 +1210,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #ef6603;
+  background: #dc3545;
   color: #fff;
 }
 
@@ -1235,7 +1235,7 @@ section {
 .faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #ef6603;
+  font-family: #dc3545;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1266,7 +1266,7 @@ section {
 }
 
 .faq .faq-list .collapsed:hover {
-  color: #ef6603;
+  color: #dc3545;
 }
 
 .faq .faq-list .collapsed .icon-show {
@@ -1375,7 +1375,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #ef6603;
+  color: #dc3545;
   float: left;
   width: 44px;
   height: 44px;
@@ -1410,7 +1410,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #ef6603;
+  background: #dc3545;
   color: #fff;
 }
 
@@ -1481,7 +1481,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #ef6603;
+  background: #dc3545;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1604,7 +1604,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #ef6603;
+  background: #dc3545;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
